ansible/local/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: default

spec:
  rules:
    - host: "www.app1.com"
      http:
        paths:
          - path: "/"
            pathType: Exact
            backend:
              service:
                name: app1-service
                port:
                  number: 80
    - host: "www.app2.com"
      http:
        paths:
          - path: "/"
            pathType: Exact
            backend:
              service:
                name: app2-service
                port:
                  number: 80
